fix(frontend): decrease title font size on mobile screens

--- a/frontend/src/web/pages/HomePage/HomePage.module.css
+++ b/frontend/src/web/pages/HomePage/HomePage.module.css
@@ -25,7 +25,7 @@
 }
 
 .title {
-  font-size: 54px;
+  font-size: 48px;
   line-height: 1.1;
   max-width: 718px;
   letter-spacing: 10px;
